修正文字＋燈區新增

--- a/lantern_101.html
+++ b/lantern_101.html
@@ -72,7 +72,7 @@
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="lantern_1.html">燈區介紹</a>
           <a class='tag_a' href="lantern_1.html">飛天曙(鼠)光燈區</a>
-          <a class='tag_a' href="lantern_102.html">光之森林</a>
+          <a class='tag_a' href="lantern_101.html">光之飛航秀</a>
         </div>
 
         <div class='little_boxs'>
@@ -82,8 +82,8 @@
         </div>
 
         <div class='news_box'>
-          <div class='plan_boxs'><a href="lantern_101.html">光之飛航秀</a></div>
-          <div class='plan_boxs'><a class='plan_ok' href="lantern_102.html">光之森林</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="lantern_101.html">光之飛航秀</a></div>
+          <div class='plan_boxs'><a href="lantern_102.html">光之森林</a></div>
           <div class='plan_boxs'><a href="lantern_103.html">光之迷宮</a></div>
           <div class='plan_boxs'><a href="lantern_104.html">飛天曙(鼠)光秀</a></div>
           <div class='plan_boxs'><a href="lantern_105.html">麒麟迎賓</a></div>
@@ -100,13 +100,14 @@
         </div>
 
         <div class='news_box'>
-          <p class='p_title'>光之森林</p>
+          <p class='p_title'>光之飛航秀</p>
         </div>
 
         <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
         <p class='p_cent_type pad20'>
-          文字候補
+          「台灣第一件」、「台灣最大」的地景屏幕光雕秀</br>
+          結合平鎮新勢公園大草原的地景特色，以桃園航空城、國門之都的特色打造飛機正面造型，搭配超大地景屏幕及燈光特效，透過音樂及影音動畫播映營造氛圍，從白天連貫到晚上，都是一場令人驚豔的展覽與演出。
         </p>
 
         <img class='all_img' src="img/gg.png">
