--- a/lantern_102.html
+++ b/lantern_102.html
@@ -106,7 +106,8 @@
         <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
         <p class='p_cent_type pad20'>
-          文字候補
+          「台灣最大」3D立體浮空投影秀</br>
+          以「環境劇場」的概念，透過光影藝術、地景藝術及空間營造的概念，利用現地的樹林環境，運用光環境的設計，創造空間的層次感，讓民眾沈浸在充滿昆蟲、動物等動畫影像的幻境的「光之森林」。
         </p>
 
         <img class='all_img' src="img/l01_02.png">
