--- a/lantern_104.html
+++ b/lantern_104.html
@@ -106,7 +106,7 @@
         <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
         <p class='p_cent_type pad20'>
-          文字候補
+          歡迎光臨2020桃園燈會平鎮新勢公園，抬起頭來數一數，有幾隻小老鼠陪你一起過鼠年呢?讓我們一起在充滿喜慶的「飛天曙(鼠)光迎賓秀」，許下新年新願望，新的一年就「鼠」你最有福氣喔!
         </p>
 
         <img class='all_img' src="img/l01_04.png">
