--- a/lantern_105.html
+++ b/lantern_105.html
@@ -106,7 +106,7 @@
         <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
         <p class='p_cent_type pad20'>
-          文字候補
+          來來來，照過來，新年招個好彩頭，「麒麟」是中國傳統的「瑞獸」，十分溫馴和善，不會傷害生靈，站在麒麟旁吸收祥瑞氣息，映照著「2020桃園燈會」的立體字樣，讓大家拍照打卡上傳分享，全世界都知道桃園燈會囉！
         </p>
 
         <img class='all_img' src="img/l01_05.png">
