--- a/lantern_107.html
+++ b/lantern_107.html
@@ -72,7 +72,7 @@
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="lantern_1.html">燈區介紹</a>
           <a class='tag_a' href="lantern_1.html">飛天曙(鼠)光燈區</a>
-          <a class='tag_a' href="lantern_102.html">光之森林</a>
+          <a class='tag_a' href="lantern_107.html">光之天橋</a>
         </div>
 
         <div class='little_boxs'>
@@ -83,12 +83,12 @@
 
         <div class='news_box'>
           <div class='plan_boxs'><a href="lantern_101.html">光之飛航秀</a></div>
-          <div class='plan_boxs'><a class='plan_ok' href="lantern_102.html">光之森林</a></div>
+          <div class='plan_boxs'><a href="lantern_102.html">光之森林</a></div>
           <div class='plan_boxs'><a href="lantern_103.html">光之迷宮</a></div>
           <div class='plan_boxs'><a href="lantern_104.html">飛天曙(鼠)光秀</a></div>
           <div class='plan_boxs'><a href="lantern_105.html">麒麟迎賓</a></div>
           <div class='plan_boxs'><a href="lantern_106.html">光之天幕</a></div>
-          <div class='plan_boxs'><a href="lantern_107.html">光之天橋</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="lantern_107.html">光之天橋</a></div>
           <div class='plan_boxs'><a href="lantern_108.html">光之幻境</a></div>
           <div class='plan_boxs'><a href="lantern_109.html">鼠光正亮</a></div>
           <div class='plan_boxs'><a href="lantern_110.html">閃傘動人</a></div>
@@ -100,13 +100,13 @@
         </div>
 
         <div class='news_box'>
-          <p class='p_title'>光之森林</p>
+          <p class='p_title'>光之天橋</p>
         </div>
 
         <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
         <p class='p_cent_type pad20'>
-          文字候補
+          數大便是美~「光之天橋」環繞新勢公園內大草原旁環狀天橋，總長約150公尺，從天橋上走過就像是走在繁星上，想像躍然馳騁於天空；從天橋下走過像是繁星的祝褔都映照在身上，祝福新的一年吉星高照。
         </p>
 
         <img class='all_img' src="img/gg.png">
