--- a/lantern_111.html
+++ b/lantern_111.html
@@ -106,7 +106,7 @@
         <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
         <p class='p_cent_type pad20'>
-          文字候補
+          一顆顆耀眼的光球高掛在樹上，抬頭看延平路段長約200公尺的人行道，白色的燈串有如往來行人一一許下的心願，象徵人們的夢想與希望，也象徵對桃園未來的期盼與光明，就如光球般璀璨。
         </p>
 
         <img class='all_img' src="img/l01_11.png">
