--- a/lantern_114.html
+++ b/lantern_114.html
@@ -72,7 +72,7 @@
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="lantern_1.html">燈區介紹</a>
           <a class='tag_a' href="lantern_1.html">飛天曙(鼠)光燈區</a>
-          <a class='tag_a' href="lantern_102.html">光之森林</a>
+          <a class='tag_a' href="lantern_114.html">光之漫遊</a>
         </div>
 
         <div class='little_boxs'>
@@ -83,7 +83,7 @@
 
         <div class='news_box'>
           <div class='plan_boxs'><a href="lantern_101.html">光之飛航秀</a></div>
-          <div class='plan_boxs'><a class='plan_ok' href="lantern_102.html">光之森林</a></div>
+          <div class='plan_boxs'><a href="lantern_102.html">光之森林</a></div>
           <div class='plan_boxs'><a href="lantern_103.html">光之迷宮</a></div>
           <div class='plan_boxs'><a href="lantern_104.html">飛天曙(鼠)光秀</a></div>
           <div class='plan_boxs'><a href="lantern_105.html">麒麟迎賓</a></div>
@@ -95,18 +95,18 @@
           <div class='plan_boxs'><a href="lantern_111.html">光之祈球</a></div>
           <div class='plan_boxs'><a href="lantern_112.html">星海琉光</a></div>
           <div class='plan_boxs'><a href="lantern_113.html">珠光落玉</a></div>
-          <div class='plan_boxs'><a href="lantern_114.html">光之漫遊</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="lantern_114.html">光之漫遊</a></div>
           <div class='plan_boxs'><a href="lantern_115.html">翠堤之光</a></div>
         </div>
 
         <div class='news_box'>
-          <p class='p_title'>光之森林</p>
+          <p class='p_title'>光之漫遊</p>
         </div>
 
         <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
         <p class='p_cent_type pad20'>
-          文字候補
+          民眾進入老街溪前，可以看到燈飾隨著清風而飄盪，夜幕低垂時，一串串美麗燈飾在溪畔引導著繼續向前。看到一隻隻可愛的寵物互相追逐嬉戲著，就像民眾帶著小寵物一同散步、嬉鬧般身歷其境。
         </p>
 
         <img class='all_img' src="img/gg.png">
