--- a/lantern_115.html
+++ b/lantern_115.html
@@ -72,7 +72,7 @@
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="lantern_1.html">燈區介紹</a>
           <a class='tag_a' href="lantern_1.html">飛天曙(鼠)光燈區</a>
-          <a class='tag_a' href="lantern_102.html">光之森林</a>
+          <a class='tag_a' href="lantern_115.html">翠堤之光</a>
         </div>
 
         <div class='little_boxs'>
@@ -83,7 +83,7 @@
 
         <div class='news_box'>
           <div class='plan_boxs'><a href="lantern_101.html">光之飛航秀</a></div>
-          <div class='plan_boxs'><a class='plan_ok' href="lantern_102.html">光之森林</a></div>
+          <div class='plan_boxs'><a href="lantern_102.html">光之森林</a></div>
           <div class='plan_boxs'><a href="lantern_103.html">光之迷宮</a></div>
           <div class='plan_boxs'><a href="lantern_104.html">飛天曙(鼠)光秀</a></div>
           <div class='plan_boxs'><a href="lantern_105.html">麒麟迎賓</a></div>
@@ -96,17 +96,17 @@
           <div class='plan_boxs'><a href="lantern_112.html">星海琉光</a></div>
           <div class='plan_boxs'><a href="lantern_113.html">珠光落玉</a></div>
           <div class='plan_boxs'><a href="lantern_114.html">光之漫遊</a></div>
-          <div class='plan_boxs'><a href="lantern_115.html">翠堤之光</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="lantern_115.html">翠堤之光</a></div>
         </div>
 
         <div class='news_box'>
-          <p class='p_title'>光之森林</p>
+          <p class='p_title'>翠堤之光</p>
         </div>
 
         <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
         <p class='p_cent_type pad20'>
-          文字候補
+          臨老街溪畔步道旁，看到一隻隻可愛的寵物互相追逐嬉戲著，用簡約的線條勾勒出活潑的意象，就像在民眾旁追趕著蝴蝶、小鳥，鳥語花香的設計一路延伸至翠堤橋上，引導民眾從翠堤橋走入燈區，進入花鳥嬉戲的氛圍裡。
         </p>
 
         <img class='all_img' src="img/gg.png">
