--- a/lantern_202.html
+++ b/lantern_202.html
@@ -72,7 +72,7 @@
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="lantern_1.html">燈區介紹</a>
           <a class='tag_a' href="lantern_2.html">大地曙(鼠)光燈區</a>
-          <a class='tag_a' href="lantern_202.html">光之花毯秀</a>
+          <a class='tag_a' href="lantern_202.html">燈會迎賓</a>
         </div>
 
         <div class='little_boxs'>
@@ -82,21 +82,26 @@
         </div>
 
         <div class='news_box'>
-          <div class='plan_boxs'><a href="lantern_201.html">光之夜市</a></div>
-          <div class='plan_boxs'><a class='plan_ok' href="lantern_202.html">光之花毯秀</a></div>
-          <div class='plan_boxs'><a href="lantern_203.html">光之涼亭</a></div>
-          <div class='plan_boxs'><a href="lantern_204.html">燈會迎賓</a></div>
-          <div class='plan_boxs'><a href="lantern_205.html">歡迎光林</a></div>
+          <div class='plan_boxs'><a href="lantern_201.html">光之雲彩</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="lantern_202.html">燈會迎賓</a></div>
+          <div class='plan_boxs'><a href="lantern_203.html">光之花毯秀</a></div>
+          <div class='plan_boxs'><a href="lantern_204.html">光之城堡</a></div>
+          <div class='plan_boxs'><a href="lantern_205.html">花現大地</a></div>
+          <div class='plan_boxs'><a href="lantern_206.html">光之鼠樂園</a></div>
+          <div class='plan_boxs'><a href="lantern_207.html">歡迎光林</a></div>
+          <div class='plan_boxs'><a href="lantern_208.html">光之夜市</a></div>
+          <div class='plan_boxs'><a href="lantern_209.html">光之花園</a></div>
+          <div class='plan_boxs'><a href="lantern_210.html">光之涼亭</a></div>
         </div>
 
         <div class='news_box'>
-          <p class='p_title'>光之花毯秀</p>
+          <p class='p_title'>燈會迎賓</p>
         </div>
 
         <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
         <p class='p_cent_type pad20'>
-          文字候補
+          在進入光明公園的入口處，便能看到朵朵雲彩燈形成的雲海，在此處「光明公園」的立座增設「2020桃園燈會」的立體字樣，讓民眾一看便能知道自己身處何處，更是拍照的熱門標誌意象！
         </p>
 
         <img class='all_img' src="img/l02_02.png">
