--- a/lantern_203.html
+++ b/lantern_203.html
@@ -72,7 +72,7 @@
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="lantern_1.html">燈區介紹</a>
           <a class='tag_a' href="lantern_2.html">大地曙(鼠)光燈區</a>
-          <a class='tag_a' href="lantern_203.html">光之涼亭</a>
+          <a class='tag_a' href="lantern_203.html">光之花毯秀</a>
         </div>
 
         <div class='little_boxs'>
@@ -82,21 +82,27 @@
         </div>
 
         <div class='news_box'>
-          <div class='plan_boxs'><a href="lantern_201.html">光之夜市</a></div>
-          <div class='plan_boxs'><a href="lantern_202.html">光之花毯秀</a></div>
-          <div class='plan_boxs'><a class='plan_ok' href="lantern_203.html">光之涼亭</a></div>
-          <div class='plan_boxs'><a href="lantern_204.html">燈會迎賓</a></div>
-          <div class='plan_boxs'><a href="lantern_205.html">歡迎光林</a></div>
+          <div class='plan_boxs'><a href="lantern_201.html">光之雲彩</a></div>
+          <div class='plan_boxs'><a href="lantern_202.html">燈會迎賓</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="lantern_203.html">光之花毯秀</a></div>
+          <div class='plan_boxs'><a href="lantern_204.html">光之城堡</a></div>
+          <div class='plan_boxs'><a href="lantern_205.html">花現大地</a></div>
+          <div class='plan_boxs'><a href="lantern_206.html">光之鼠樂園</a></div>
+          <div class='plan_boxs'><a href="lantern_207.html">歡迎光林</a></div>
+          <div class='plan_boxs'><a href="lantern_208.html">光之夜市</a></div>
+          <div class='plan_boxs'><a href="lantern_209.html">光之花園</a></div>
+          <div class='plan_boxs'><a href="lantern_210.html">光之涼亭</a></div>
         </div>
 
         <div class='news_box'>
-          <p class='p_title'>光之涼亭</p>
+          <p class='p_title'>光之花毯秀</p>
         </div>
 
         <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
         <p class='p_cent_type pad20'>
-          文字候補
+          「國內第一」，首創超過萬朵LED七彩變色玫瑰花毯！</br>
+          超大玫瑰花圖形的「花毯」，白天是一大片白色玫瑰花的花海，晚上由國內知名音樂家蔡興國，以桃園大溪已逝流行音樂巨星--鳳飛飛的傳世愛情歌曲「玫瑰玫瑰我愛你、好好愛我、愛你在我心口難開」，組合成三組不同的「音樂花海燈光秀」的展演樂章，讓民眾隨著音樂的旋律感受七彩花朵變換。
         </p>
 
         <img class='all_img' src="img/l02_03.png">
