--- a/lantern_206.html
+++ b/lantern_206.html
@@ -71,47 +71,40 @@
         <div class='tag_boxs'>
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="lantern_1.html">燈區介紹</a>
-          <a class='tag_a' href="lantern_3.html">銀河曙(鼠)光燈區</a>
+          <a class='tag_a' href="lantern_2.html">大地曙(鼠)光燈區</a>
+          <a class='tag_a' href="lantern_206.html">光之鼠樂園</a>
         </div>
 
         <div class='little_boxs'>
           <a href="lantern_1.html" class='little03'>飛天曙(鼠)光燈區</a>
-          <a href="lantern_2.html" class='little03'>大地曙(鼠)光燈區</a>
-          <a href="lantern_3.html" class='little03 l_ok'>銀河曙(鼠)光燈區</a>
+          <a href="lantern_2.html" class='little03 l_ok'>大地曙(鼠)光燈區</a>
+          <a href="lantern_3.html" class='little03'>銀河曙(鼠)光燈區</a>
         </div>
 
         <div class='news_box'>
-          <div class='plan_boxs'><a href="lantern_301.html">光之巨龍秀</a></div>
-          <div class='plan_boxs'><a href="lantern_302.html">光之動物園</a></div>
-          <div class='plan_boxs'><a href="lantern_303.html">天使之翼</a></div>
-          <div class='plan_boxs'><a href="lantern_304.html">光之啟程</a></div>
-          <div class='plan_boxs'><a href="lantern_305.html">光影之窗</a></div>
-          <div class='plan_boxs'><a href="lantern_306.html">小烏來天空步道</a></div>
-          <div class='plan_boxs'><a href="lantern_307.html">大溪老街鼠光趣</a></div>
-          <div class='plan_boxs'><a href="lantern_308.html">曙光綿延蓮花甜</a></div>
-          <div class='plan_boxs'><a href="lantern_309.html">大溪石門逍遙遊</a></div>
-          <div class='plan_boxs'><a href="lantern_310.html">鼠光遠足虎頭山</a></div>
-          <div class='plan_boxs'><a href="lantern_311.html">積木幻彩迴廊</a></div>
-          <div class='plan_boxs'><a href="lantern_312.html">幻彩迎賓</a></div>
-          <div class='plan_boxs'><a href="lantern_313.html">飛絮重生</a></div>
-          <div class='plan_boxs'><a href="lantern_314.html">星光流域</a></div>
-          <div class='plan_boxs'><a href="lantern_315.html">水漾桃源</a></div>
-          <div class='plan_boxs'><a href="lantern_316.html">幸福銀河</a></div>
-          <div class='plan_boxs'><a href="lantern_317.html">希望風吹</a></div>
-          <div class='plan_boxs'><a href="lantern_318.html">生生不息</a></div>
+          <div class='plan_boxs'><a href="lantern_201.html">光之雲彩</a></div>
+          <div class='plan_boxs'><a href="lantern_202.html">燈會迎賓</a></div>
+          <div class='plan_boxs'><a href="lantern_203.html">光之花毯秀</a></div>
+          <div class='plan_boxs'><a href="lantern_204.html">光之城堡</a></div>
+          <div class='plan_boxs'><a href="lantern_205.html">花現大地</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="lantern_206.html">光之鼠樂園</a></div>
+          <div class='plan_boxs'><a href="lantern_207.html">歡迎光林</a></div>
+          <div class='plan_boxs'><a href="lantern_208.html">光之夜市</a></div>
+          <div class='plan_boxs'><a href="lantern_209.html">光之花園</a></div>
+          <div class='plan_boxs'><a href="lantern_210.html">光之涼亭</a></div>
         </div>
 
         <div class='news_box'>
-          <p class='p_title'>銀河曙(鼠)光燈區</p>
+          <p class='p_title'>光之鼠樂園</p>
         </div>
 
-        <p class='add_type pad20' title='地點：'>老街溪及河岸公園</p>
+        <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
-        <p class='p_cent_type padbot20'>
-          文字候補
+        <p class='p_cent_type pad20'>
+          呼應「鼠」年的年輪主題，有四隻高達2.5-7公尺的充氣造型動物偶「小倉鼠」與「小貓咪」在光明公園的大草原上，你可以和貓咪與小倉鼠在「光之鼠樂園」一同玩耍喔!
         </p>
 
-        <img class='all_img' src="img/l03.jpg">
+        <img class='all_img' src="img/gg.png">
       </div>
     </div>
 
