--- a/lantern_304.html
+++ b/lantern_304.html
@@ -82,17 +82,24 @@
         </div>
 
         <div class='news_box'>
-          <div class='plan_boxs'><a href="lantern_301.html">天使之翼</a></div>
-          <div class='plan_boxs'><a href="lantern_302.html">水漾桃源</a></div>
-          <div class='plan_boxs'><a href="lantern_303.html">生生不息</a></div>
+          <div class='plan_boxs'><a href="lantern_301.html">光之巨龍秀</a></div>
+          <div class='plan_boxs'><a href="lantern_302.html">光之動物園</a></div>
+          <div class='plan_boxs'><a href="lantern_303.html">天使之翼</a></div>
           <div class='plan_boxs'><a class='plan_ok' href="lantern_304.html">光之啟程</a></div>
           <div class='plan_boxs'><a href="lantern_305.html">光影之窗</a></div>
-          <div class='plan_boxs'><a href="lantern_306.html">希望風吹</a></div>
-          <div class='plan_boxs'><a href="lantern_307.html">幸福銀河</a></div>
-          <div class='plan_boxs'><a href="lantern_308.html">星光流域</a></div>
-          <div class='plan_boxs'><a href="lantern_309.html">飛絮重生</a></div>
-          <div class='plan_boxs'><a href="lantern_310.html">積木幻彩迴廊</a></div>
-          <div class='plan_boxs'><a href="lantern_311.html">幻彩迎賓</a></div>
+          <div class='plan_boxs'><a href="lantern_306.html">小烏來天空步道</a></div>
+          <div class='plan_boxs'><a href="lantern_307.html">大溪老街鼠光趣</a></div>
+          <div class='plan_boxs'><a href="lantern_308.html">曙光綿延蓮花甜</a></div>
+          <div class='plan_boxs'><a href="lantern_309.html">大溪石門逍遙遊</a></div>
+          <div class='plan_boxs'><a href="lantern_310.html">鼠光遠足虎頭山</a></div>
+          <div class='plan_boxs'><a href="lantern_311.html">積木幻彩迴廊</a></div>
+          <div class='plan_boxs'><a href="lantern_312.html">幻彩迎賓</a></div>
+          <div class='plan_boxs'><a href="lantern_313.html">飛絮重生</a></div>
+          <div class='plan_boxs'><a href="lantern_314.html">星光流域</a></div>
+          <div class='plan_boxs'><a href="lantern_315.html">水漾桃源</a></div>
+          <div class='plan_boxs'><a href="lantern_316.html">幸福銀河</a></div>
+          <div class='plan_boxs'><a href="lantern_317.html">希望風吹</a></div>
+          <div class='plan_boxs'><a href="lantern_318.html">生生不息</a></div>
         </div>
 
         <div class='news_box'>
@@ -102,7 +109,7 @@
         <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
         <p class='p_cent_type pad20'>
-          文字候補
+          桃園機捷從台北市貫穿新北市，串聯北北桃一日生活圈，方便了桃園居民的生活、也帶動了交通的便利和經濟的發展，機捷為桃園帶來的明亮未來，以車窗為相框，讓我們用相機框起2020桃園燈會的記憶。
         </p>
 
         <img class='all_img' src="img/l03_04.png">
