--- a/lantern_309.html
+++ b/lantern_309.html
@@ -72,7 +72,7 @@
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="lantern_1.html">燈區介紹</a>
           <a class='tag_a' href="lantern_3.html">銀河曙(鼠)光燈區</a>
-          <a class='tag_a' href="lantern_309.html">飛絮重生</a>
+          <a class='tag_a' href="lantern_309.html">大溪石門逍遙遊</a>
         </div>
 
         <div class='little_boxs'>
@@ -82,30 +82,37 @@
         </div>
 
         <div class='news_box'>
-          <div class='plan_boxs'><a href="lantern_301.html">天使之翼</a></div>
-          <div class='plan_boxs'><a href="lantern_302.html">水漾桃源</a></div>
-          <div class='plan_boxs'><a href="lantern_303.html">生生不息</a></div>
+          <div class='plan_boxs'><a href="lantern_301.html">光之巨龍秀</a></div>
+          <div class='plan_boxs'><a href="lantern_302.html">光之動物園</a></div>
+          <div class='plan_boxs'><a href="lantern_303.html">天使之翼</a></div>
           <div class='plan_boxs'><a href="lantern_304.html">光之啟程</a></div>
           <div class='plan_boxs'><a href="lantern_305.html">光影之窗</a></div>
-          <div class='plan_boxs'><a href="lantern_306.html">希望風吹</a></div>
-          <div class='plan_boxs'><a href="lantern_307.html">幸福銀河</a></div>
-          <div class='plan_boxs'><a href="lantern_308.html">星光流域</a></div>
-          <div class='plan_boxs'><a class='plan_ok' href="lantern_309.html">飛絮重生</a></div>
-          <div class='plan_boxs'><a href="lantern_310.html">積木幻彩迴廊</a></div>
-          <div class='plan_boxs'><a href="lantern_311.html">幻彩迎賓</a></div>
+          <div class='plan_boxs'><a href="lantern_306.html">小烏來天空步道</a></div>
+          <div class='plan_boxs'><a href="lantern_307.html">大溪老街鼠光趣</a></div>
+          <div class='plan_boxs'><a href="lantern_308.html">曙光綿延蓮花甜</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="lantern_309.html">大溪石門逍遙遊</a></div>
+          <div class='plan_boxs'><a href="lantern_310.html">鼠光遠足虎頭山</a></div>
+          <div class='plan_boxs'><a href="lantern_311.html">積木幻彩迴廊</a></div>
+          <div class='plan_boxs'><a href="lantern_312.html">幻彩迎賓</a></div>
+          <div class='plan_boxs'><a href="lantern_313.html">飛絮重生</a></div>
+          <div class='plan_boxs'><a href="lantern_314.html">星光流域</a></div>
+          <div class='plan_boxs'><a href="lantern_315.html">水漾桃源</a></div>
+          <div class='plan_boxs'><a href="lantern_316.html">幸福銀河</a></div>
+          <div class='plan_boxs'><a href="lantern_317.html">希望風吹</a></div>
+          <div class='plan_boxs'><a href="lantern_318.html">生生不息</a></div>
         </div>
 
         <div class='news_box'>
-          <p class='p_title'>飛絮重生</p>
+          <p class='p_title'>大溪石門逍遙遊</p>
         </div>
 
         <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
         <p class='p_cent_type pad20'>
-          文字候補
+          桃園市著名的大溪石門水庫，景色山清水秀，是桃園一塊地靈人傑的好處，這裡將石門水庫搭配可愛的倉鼠吉祥物，帶著民眾一起悠閒的在石門水庫眺望美景，也呼應了鼠年的傳統花燈意象，打造出一座具有桃園特色又吸引目光的藝術花燈。
         </p>
 
-        <img class='all_img' src="img/l03_09.png">
+        <img class='all_img' src="img/gg.png">
       </div>
     </div>
 
