--- a/lantern_312.html
+++ b/lantern_312.html
@@ -72,6 +72,7 @@
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="lantern_1.html">燈區介紹</a>
           <a class='tag_a' href="lantern_3.html">銀河曙(鼠)光燈區</a>
+          <a class='tag_a' href="lantern_312.html">幻彩迎賓</a>
         </div>
 
         <div class='little_boxs'>
@@ -92,7 +93,7 @@
           <div class='plan_boxs'><a href="lantern_309.html">大溪石門逍遙遊</a></div>
           <div class='plan_boxs'><a href="lantern_310.html">鼠光遠足虎頭山</a></div>
           <div class='plan_boxs'><a href="lantern_311.html">積木幻彩迴廊</a></div>
-          <div class='plan_boxs'><a href="lantern_312.html">幻彩迎賓</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="lantern_312.html">幻彩迎賓</a></div>
           <div class='plan_boxs'><a href="lantern_313.html">飛絮重生</a></div>
           <div class='plan_boxs'><a href="lantern_314.html">星光流域</a></div>
           <div class='plan_boxs'><a href="lantern_315.html">水漾桃源</a></div>
@@ -102,16 +103,16 @@
         </div>
 
         <div class='news_box'>
-          <p class='p_title'>銀河曙(鼠)光燈區</p>
+          <p class='p_title'>幻彩迎賓</p>
         </div>
 
-        <p class='add_type pad20' title='地點：'>老街溪及河岸公園</p>
+        <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
-        <p class='p_cent_type padbot20'>
-          文字候補
+        <p class='p_cent_type pad20'>
+          這個「2020桃園燈會」的立體字樣，您千萬不能錯過喔！照片記錄這歷史性的一刻，讓大家一看便能知道自己身處何處，是拍照的熱門景點喔！歡迎蒞臨「2020桃園燈會」。
         </p>
 
-        <img class='all_img' src="img/l03.jpg">
+        <img class='all_img' src="img/l03_12.png">
       </div>
     </div>
 
