--- a/lantern_313.html
+++ b/lantern_313.html
@@ -72,6 +72,7 @@
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="lantern_1.html">燈區介紹</a>
           <a class='tag_a' href="lantern_3.html">銀河曙(鼠)光燈區</a>
+          <a class='tag_a' href="lantern_313.html">飛絮重生</a>
         </div>
 
         <div class='little_boxs'>
@@ -93,7 +94,7 @@
           <div class='plan_boxs'><a href="lantern_310.html">鼠光遠足虎頭山</a></div>
           <div class='plan_boxs'><a href="lantern_311.html">積木幻彩迴廊</a></div>
           <div class='plan_boxs'><a href="lantern_312.html">幻彩迎賓</a></div>
-          <div class='plan_boxs'><a href="lantern_313.html">飛絮重生</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="lantern_313.html">飛絮重生</a></div>
           <div class='plan_boxs'><a href="lantern_314.html">星光流域</a></div>
           <div class='plan_boxs'><a href="lantern_315.html">水漾桃源</a></div>
           <div class='plan_boxs'><a href="lantern_316.html">幸福銀河</a></div>
@@ -102,16 +103,16 @@
         </div>
 
         <div class='news_box'>
-          <p class='p_title'>銀河曙(鼠)光燈區</p>
+          <p class='p_title'>飛絮重生</p>
         </div>
 
-        <p class='add_type pad20' title='地點：'>老街溪及河岸公園</p>
+        <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
-        <p class='p_cent_type padbot20'>
-          文字候補
+        <p class='p_cent_type pad20'>
+          「飛絮重生」以大量雪白的「蒲公英花朵燈」在老街溪新勢公園段水域兩側溪畔，形成帶狀的雪白蒲公英花海，營造雪白飛絮地景。這就像「蒲公英春暖花開，雪白飛絮遠颺，孕育新生」一般，在老街溪重現生機之後，透過種子飛絮孕育新生。
         </p>
 
-        <img class='all_img' src="img/l03.jpg">
+        <img class='all_img' src="img/l03_13.png">
       </div>
     </div>
 
