--- a/lantern_314.html
+++ b/lantern_314.html
@@ -72,6 +72,7 @@
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="lantern_1.html">燈區介紹</a>
           <a class='tag_a' href="lantern_3.html">銀河曙(鼠)光燈區</a>
+          <a class='tag_a' href="lantern_314.html">星光流域</a>
         </div>
 
         <div class='little_boxs'>
@@ -94,7 +95,7 @@
           <div class='plan_boxs'><a href="lantern_311.html">積木幻彩迴廊</a></div>
           <div class='plan_boxs'><a href="lantern_312.html">幻彩迎賓</a></div>
           <div class='plan_boxs'><a href="lantern_313.html">飛絮重生</a></div>
-          <div class='plan_boxs'><a href="lantern_314.html">星光流域</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="lantern_314.html">星光流域</a></div>
           <div class='plan_boxs'><a href="lantern_315.html">水漾桃源</a></div>
           <div class='plan_boxs'><a href="lantern_316.html">幸福銀河</a></div>
           <div class='plan_boxs'><a href="lantern_317.html">希望風吹</a></div>
@@ -102,16 +103,16 @@
         </div>
 
         <div class='news_box'>
-          <p class='p_title'>銀河曙(鼠)光燈區</p>
+          <p class='p_title'>星光流域</p>
         </div>
 
-        <p class='add_type pad20' title='地點：'>老街溪及河岸公園</p>
+        <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
-        <p class='p_cent_type padbot20'>
-          文字候補
+        <p class='p_cent_type pad20'>
+          老街溪在造重生之後，變成一條市民休閒的生活綠帶，更加隨著整體規劃建設完成後，帶來更多生機與商機，如同北桃源的南崁溪一樣，成為南桃園「星光耀眼」的新地標、新景點、新商圈，故以「星光流域」為名彰顯其未來的願景。
         </p>
 
-        <img class='all_img' src="img/l03.jpg">
+        <img class='all_img' src="img/l03_14.png">
       </div>
     </div>
 
