--- a/lantern_315.html
+++ b/lantern_315.html
@@ -72,6 +72,7 @@
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="lantern_1.html">燈區介紹</a>
           <a class='tag_a' href="lantern_3.html">銀河曙(鼠)光燈區</a>
+          <a class='tag_a' href="lantern_315.html">水漾桃源</a>
         </div>
 
         <div class='little_boxs'>
@@ -95,23 +96,23 @@
           <div class='plan_boxs'><a href="lantern_312.html">幻彩迎賓</a></div>
           <div class='plan_boxs'><a href="lantern_313.html">飛絮重生</a></div>
           <div class='plan_boxs'><a href="lantern_314.html">星光流域</a></div>
-          <div class='plan_boxs'><a href="lantern_315.html">水漾桃源</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="lantern_315.html">水漾桃源</a></div>
           <div class='plan_boxs'><a href="lantern_316.html">幸福銀河</a></div>
           <div class='plan_boxs'><a href="lantern_317.html">希望風吹</a></div>
           <div class='plan_boxs'><a href="lantern_318.html">生生不息</a></div>
         </div>
 
         <div class='news_box'>
-          <p class='p_title'>銀河曙(鼠)光燈區</p>
+          <p class='p_title'>水漾桃源</p>
         </div>
 
-        <p class='add_type pad20' title='地點：'>老街溪及河岸公園</p>
+        <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
-        <p class='p_cent_type padbot20'>
-          文字候補
+        <p class='p_cent_type pad20'>
+          這段老街溪開始有較豐沛的水量，以老街溪的「水漾桃源、親水世界」為主題，以「數大便是美」的大量「水母燈」懸掛在老街溪河段的上空處，水母燈的光影倒映在溪水面上，形成「藝想繽紛的水世界」。
         </p>
 
-        <img class='all_img' src="img/l03.jpg">
+        <img class='all_img' src="img/l03_15.png">
       </div>
     </div>
 
