--- a/lantern_316.html
+++ b/lantern_316.html
@@ -72,6 +72,7 @@
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="lantern_1.html">燈區介紹</a>
           <a class='tag_a' href="lantern_3.html">銀河曙(鼠)光燈區</a>
+          <a class='tag_a' href="lantern_316.html">幸福銀河</a>
         </div>
 
         <div class='little_boxs'>
@@ -96,22 +97,22 @@
           <div class='plan_boxs'><a href="lantern_313.html">飛絮重生</a></div>
           <div class='plan_boxs'><a href="lantern_314.html">星光流域</a></div>
           <div class='plan_boxs'><a href="lantern_315.html">水漾桃源</a></div>
-          <div class='plan_boxs'><a href="lantern_316.html">幸福銀河</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="lantern_316.html">幸福銀河</a></div>
           <div class='plan_boxs'><a href="lantern_317.html">希望風吹</a></div>
           <div class='plan_boxs'><a href="lantern_318.html">生生不息</a></div>
         </div>
 
         <div class='news_box'>
-          <p class='p_title'>銀河曙(鼠)光燈區</p>
+          <p class='p_title'>幸福銀河</p>
         </div>
 
-        <p class='add_type pad20' title='地點：'>老街溪及河岸公園</p>
+        <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
-        <p class='p_cent_type padbot20'>
-          文字候補
+        <p class='p_cent_type pad20'>
+          師從日本「平成天之川」，以「水漂光球。祈求幸福」，加上小幸福光球，透過「數大便是美」的視覺營造，形成一條「幸福銀河」。並搭配泡泡機，不斷地在空中吹出七彩泡泡，營造整個場域幸福浪漫的氛圍!!!
         </p>
 
-        <img class='all_img' src="img/l03.jpg">
+        <img class='all_img' src="img/l03_16.png">
       </div>
     </div>
 
