--- a/lantern_318.html
+++ b/lantern_318.html
@@ -72,6 +72,7 @@
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="lantern_1.html">燈區介紹</a>
           <a class='tag_a' href="lantern_3.html">銀河曙(鼠)光燈區</a>
+          <a class='tag_a' href="lantern_318.html">生生不息</a>
         </div>
 
         <div class='little_boxs'>
@@ -98,20 +99,20 @@
           <div class='plan_boxs'><a href="lantern_315.html">水漾桃源</a></div>
           <div class='plan_boxs'><a href="lantern_316.html">幸福銀河</a></div>
           <div class='plan_boxs'><a href="lantern_317.html">希望風吹</a></div>
-          <div class='plan_boxs'><a href="lantern_318.html">生生不息</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="lantern_318.html">生生不息</a></div>
         </div>
 
         <div class='news_box'>
-          <p class='p_title'>銀河曙(鼠)光燈區</p>
+          <p class='p_title'>生生不息</p>
         </div>
 
-        <p class='add_type pad20' title='地點：'>老街溪及河岸公園</p>
+        <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
-        <p class='p_cent_type padbot20'>
-          文字候補
+        <p class='p_cent_type pad20'>
+          「生生不息」，運用各種不同造型燈飾，綿延接續的垂柳燈、溪中荷花燈盛開、水面波光粼粼，水面上白鷺鷥、青蛙、蝴蝶生姿，河畔邊蘆葦燈遍佈…………營造出老街溪「生生不息」的重生意象。
         </p>
 
-        <img class='all_img' src="img/l03.jpg">
+        <img class='all_img' src="img/l03_18.png">
       </div>
     </div>
 
