--- a/lantern_103.html
+++ b/lantern_103.html
@@ -106,7 +106,8 @@
         <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
         <p class='p_cent_type pad20'>
-          文字候補
+          「台灣第一」大面積燈飾迷宮</br>
+          民眾不只是賞燈，還可以與燈飾燈藝合二為一~「光之迷宮」運用平鎮新勢公園「地景」的草坪特色，以大量的LED燈飾讓民眾進入迷宮之中，有如萬花筒燈海一般，完全溶入地景、光影藝術之美中。
         </p>
 
         <img class='all_img' src="img/l01_03.png">
