--- a/lantern_106.html
+++ b/lantern_106.html
@@ -106,7 +106,7 @@
         <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
         <p class='p_cent_type pad20'>
-          文字候補
+          以時尚簡約的迴廊造型，加入「光影藝術」的燈藝設計，搭配音樂旋律營造氛圍，任何的角度都是最佳視角，融合「環境劇場」情境規劃打造一處迷幻夢境的「光之天幕」。
         </p>
 
         <img class='all_img' src="img/l01_06.png">
