--- a/lantern_109.html
+++ b/lantern_109.html
@@ -72,7 +72,7 @@
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="lantern_1.html">燈區介紹</a>
           <a class='tag_a' href="lantern_1.html">飛天曙(鼠)光燈區</a>
-          <a class='tag_a' href="lantern_102.html">光之森林</a>
+          <a class='tag_a' href="lantern_109.html">鼠光正亮</a>
         </div>
 
         <div class='little_boxs'>
@@ -83,14 +83,14 @@
 
         <div class='news_box'>
           <div class='plan_boxs'><a href="lantern_101.html">光之飛航秀</a></div>
-          <div class='plan_boxs'><a class='plan_ok' href="lantern_102.html">光之森林</a></div>
+          <div class='plan_boxs'><a href="lantern_102.html">光之森林</a></div>
           <div class='plan_boxs'><a href="lantern_103.html">光之迷宮</a></div>
           <div class='plan_boxs'><a href="lantern_104.html">飛天曙(鼠)光秀</a></div>
           <div class='plan_boxs'><a href="lantern_105.html">麒麟迎賓</a></div>
           <div class='plan_boxs'><a href="lantern_106.html">光之天幕</a></div>
           <div class='plan_boxs'><a href="lantern_107.html">光之天橋</a></div>
           <div class='plan_boxs'><a href="lantern_108.html">光之幻境</a></div>
-          <div class='plan_boxs'><a href="lantern_109.html">鼠光正亮</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="lantern_109.html">鼠光正亮</a></div>
           <div class='plan_boxs'><a href="lantern_110.html">閃傘動人</a></div>
           <div class='plan_boxs'><a href="lantern_111.html">光之祈球</a></div>
           <div class='plan_boxs'><a href="lantern_112.html">星海琉光</a></div>
@@ -100,13 +100,13 @@
         </div>
 
         <div class='news_box'>
-          <p class='p_title'>光之森林</p>
+          <p class='p_title'>鼠光正亮</p>
         </div>
 
         <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
         <p class='p_cent_type pad20'>
-          文字候補
+          就是這裡讓你2020桃園燈會主視覺靠得更近，還有超級可愛的小倉鼠吉祥物，不論男女老少都可以跟小倉鼠一起同樂喔，不論白天夜晚快快坐下來喔！一起擺個卡哇伊的POSE吧！
         </p>
 
         <img class='all_img' src="img/gg.png">
