--- a/lantern_113.html
+++ b/lantern_113.html
@@ -72,7 +72,7 @@
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="lantern_1.html">燈區介紹</a>
           <a class='tag_a' href="lantern_1.html">飛天曙(鼠)光燈區</a>
-          <a class='tag_a' href="lantern_102.html">光之森林</a>
+          <a class='tag_a' href="lantern_113.html">珠光落玉</a>
         </div>
 
         <div class='little_boxs'>
@@ -83,7 +83,7 @@
 
         <div class='news_box'>
           <div class='plan_boxs'><a href="lantern_101.html">光之飛航秀</a></div>
-          <div class='plan_boxs'><a class='plan_ok' href="lantern_102.html">光之森林</a></div>
+          <div class='plan_boxs'><a href="lantern_102.html">光之森林</a></div>
           <div class='plan_boxs'><a href="lantern_103.html">光之迷宮</a></div>
           <div class='plan_boxs'><a href="lantern_104.html">飛天曙(鼠)光秀</a></div>
           <div class='plan_boxs'><a href="lantern_105.html">麒麟迎賓</a></div>
@@ -94,19 +94,19 @@
           <div class='plan_boxs'><a href="lantern_110.html">閃傘動人</a></div>
           <div class='plan_boxs'><a href="lantern_111.html">光之祈球</a></div>
           <div class='plan_boxs'><a href="lantern_112.html">星海琉光</a></div>
-          <div class='plan_boxs'><a href="lantern_113.html">珠光落玉</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="lantern_113.html">珠光落玉</a></div>
           <div class='plan_boxs'><a href="lantern_114.html">光之漫遊</a></div>
           <div class='plan_boxs'><a href="lantern_115.html">翠堤之光</a></div>
         </div>
 
         <div class='news_box'>
-          <p class='p_title'>光之森林</p>
+          <p class='p_title'>珠光落玉</p>
         </div>
 
         <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
         <p class='p_cent_type pad20'>
-          文字候補
+          從「光之迷宮」的樹林綠地、經「光之天橋」旁的斜坡綠地，到翠堤橋，總長約160公尺。看到大小高低錯落的光球灑落在草地間，彷彿愛麗絲走入夢遊仙境一般，形成炫彩繽紛、珠光落玉的光球之境。
         </p>
 
         <img class='all_img' src="img/gg.png">
