--- a/lantern_2.html
+++ b/lantern_2.html
@@ -81,11 +81,16 @@
         </div>
 
         <div class='news_box'>
-          <div class='plan_boxs'><a href="lantern_201.html">光之夜市</a></div>
-          <div class='plan_boxs'><a href="lantern_202.html">光之花毯秀</a></div>
-          <div class='plan_boxs'><a href="lantern_203.html">光之涼亭</a></div>
-          <div class='plan_boxs'><a href="lantern_204.html">燈會迎賓</a></div>
-          <div class='plan_boxs'><a href="lantern_205.html">歡迎光林</a></div>
+          <div class='plan_boxs'><a href="lantern_201.html">光之雲彩</a></div>
+          <div class='plan_boxs'><a href="lantern_202.html">燈會迎賓</a></div>
+          <div class='plan_boxs'><a href="lantern_203.html">光之花毯秀</a></div>
+          <div class='plan_boxs'><a href="lantern_204.html">光之城堡</a></div>
+          <div class='plan_boxs'><a href="lantern_205.html">花現大地</a></div>
+          <div class='plan_boxs'><a href="lantern_206.html">光之鼠樂園</a></div>
+          <div class='plan_boxs'><a href="lantern_207.html">歡迎光林</a></div>
+          <div class='plan_boxs'><a href="lantern_208.html">光之夜市</a></div>
+          <div class='plan_boxs'><a href="lantern_209.html">光之花園</a></div>
+          <div class='plan_boxs'><a href="lantern_210.html">光之涼亭</a></div>
         </div>
 
         <div class='news_box'>
