--- a/lantern_204.html
+++ b/lantern_204.html
@@ -72,7 +72,7 @@
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="lantern_1.html">燈區介紹</a>
           <a class='tag_a' href="lantern_2.html">大地曙(鼠)光燈區</a>
-          <a class='tag_a' href="lantern_204.html">燈會迎賓</a>
+          <a class='tag_a' href="lantern_204.html">光之城堡</a>
         </div>
 
         <div class='little_boxs'>
@@ -82,24 +82,29 @@
         </div>
 
         <div class='news_box'>
-          <div class='plan_boxs'><a href="lantern_201.html">光之夜市</a></div>
-          <div class='plan_boxs'><a href="lantern_202.html">光之花毯秀</a></div>
-          <div class='plan_boxs'><a href="lantern_203.html">光之涼亭</a></div>
-          <div class='plan_boxs'><a class='plan_ok' href="lantern_204.html">燈會迎賓</a></div>
-          <div class='plan_boxs'><a href="lantern_205.html">歡迎光林</a></div>
+          <div class='plan_boxs'><a href="lantern_201.html">光之雲彩</a></div>
+          <div class='plan_boxs'><a href="lantern_202.html">燈會迎賓</a></div>
+          <div class='plan_boxs'><a href="lantern_203.html">光之花毯秀</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="lantern_204.html">光之城堡</a></div>
+          <div class='plan_boxs'><a href="lantern_205.html">花現大地</a></div>
+          <div class='plan_boxs'><a href="lantern_206.html">光之鼠樂園</a></div>
+          <div class='plan_boxs'><a href="lantern_207.html">歡迎光林</a></div>
+          <div class='plan_boxs'><a href="lantern_208.html">光之夜市</a></div>
+          <div class='plan_boxs'><a href="lantern_209.html">光之花園</a></div>
+          <div class='plan_boxs'><a href="lantern_210.html">光之涼亭</a></div>
         </div>
 
         <div class='news_box'>
-          <p class='p_title'>燈會迎賓</p>
+          <p class='p_title'>光之城堡</p>
         </div>
 
         <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
         <p class='p_cent_type pad20'>
-          文字候補
+          光之城堡採用巴洛克光雕的視覺風格及燈藝技法，寬18公尺、高12公尺，在城堡內設計樓梯，讓民眾可以拾階而上、登上城堡上方歡賞每15-20分鐘的「光之花毯秀」，讓民眾感受浪漫，在高處城堡遠眺花毯秀，不論白天夜晚視野絕佳。
         </p>
 
-        <img class='all_img' src="img/l02_04.png">
+        <img class='all_img' src="img/gg.png">
       </div>
     </div>
 
