--- a/lantern_305.html
+++ b/lantern_305.html
@@ -82,17 +82,24 @@
         </div>
 
         <div class='news_box'>
-          <div class='plan_boxs'><a href="lantern_301.html">天使之翼</a></div>
-          <div class='plan_boxs'><a href="lantern_302.html">水漾桃源</a></div>
-          <div class='plan_boxs'><a href="lantern_303.html">生生不息</a></div>
+          <div class='plan_boxs'><a href="lantern_301.html">光之巨龍秀</a></div>
+          <div class='plan_boxs'><a href="lantern_302.html">光之動物園</a></div>
+          <div class='plan_boxs'><a href="lantern_303.html">天使之翼</a></div>
           <div class='plan_boxs'><a href="lantern_304.html">光之啟程</a></div>
           <div class='plan_boxs'><a class='plan_ok' href="lantern_305.html">光影之窗</a></div>
-          <div class='plan_boxs'><a href="lantern_306.html">希望風吹</a></div>
-          <div class='plan_boxs'><a href="lantern_307.html">幸福銀河</a></div>
-          <div class='plan_boxs'><a href="lantern_308.html">星光流域</a></div>
-          <div class='plan_boxs'><a href="lantern_309.html">飛絮重生</a></div>
-          <div class='plan_boxs'><a href="lantern_310.html">積木幻彩迴廊</a></div>
-          <div class='plan_boxs'><a href="lantern_311.html">幻彩迎賓</a></div>
+          <div class='plan_boxs'><a href="lantern_306.html">小烏來天空步道</a></div>
+          <div class='plan_boxs'><a href="lantern_307.html">大溪老街鼠光趣</a></div>
+          <div class='plan_boxs'><a href="lantern_308.html">曙光綿延蓮花甜</a></div>
+          <div class='plan_boxs'><a href="lantern_309.html">大溪石門逍遙遊</a></div>
+          <div class='plan_boxs'><a href="lantern_310.html">鼠光遠足虎頭山</a></div>
+          <div class='plan_boxs'><a href="lantern_311.html">積木幻彩迴廊</a></div>
+          <div class='plan_boxs'><a href="lantern_312.html">幻彩迎賓</a></div>
+          <div class='plan_boxs'><a href="lantern_313.html">飛絮重生</a></div>
+          <div class='plan_boxs'><a href="lantern_314.html">星光流域</a></div>
+          <div class='plan_boxs'><a href="lantern_315.html">水漾桃源</a></div>
+          <div class='plan_boxs'><a href="lantern_316.html">幸福銀河</a></div>
+          <div class='plan_boxs'><a href="lantern_317.html">希望風吹</a></div>
+          <div class='plan_boxs'><a href="lantern_318.html">生生不息</a></div>
         </div>
 
         <div class='news_box'>
@@ -102,7 +109,7 @@
         <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
         <p class='p_cent_type pad20'>
-          文字候補
+          運用老街溪河岸邊的窗框藝術，每扇門打開你對世界的光明想像，每扇窗讓你看盡人生的繁華熱鬧。「沈浸式體驗」讓每個人以窗框為背景瞬間的穿越，按下快門的分秒就是永恆！大家一起記錄下2020桃園燈會的美好回憶。
         </p>
 
         <img class='all_img' src="img/l03_05.png">
