--- a/lantern_317.html
+++ b/lantern_317.html
@@ -72,6 +72,7 @@
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="lantern_1.html">燈區介紹</a>
           <a class='tag_a' href="lantern_3.html">銀河曙(鼠)光燈區</a>
+          <a class='tag_a' href="lantern_317.html">希望風吹</a>
         </div>
 
         <div class='little_boxs'>
@@ -97,21 +98,21 @@
           <div class='plan_boxs'><a href="lantern_314.html">星光流域</a></div>
           <div class='plan_boxs'><a href="lantern_315.html">水漾桃源</a></div>
           <div class='plan_boxs'><a href="lantern_316.html">幸福銀河</a></div>
-          <div class='plan_boxs'><a href="lantern_317.html">希望風吹</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="lantern_317.html">希望風吹</a></div>
           <div class='plan_boxs'><a href="lantern_318.html">生生不息</a></div>
         </div>
 
         <div class='news_box'>
-          <p class='p_title'>銀河曙(鼠)光燈區</p>
+          <p class='p_title'>希望風吹</p>
         </div>
 
-        <p class='add_type pad20' title='地點：'>老街溪及河岸公園</p>
+        <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
-        <p class='p_cent_type padbot20'>
-          文字候補
+        <p class='p_cent_type pad20'>
+          「希望風吹」，特別在燈會老街溪「銀河曙光燈區」的最末段，選擇在溪畔擺置大量的「希望風車」燈，展現「數大便是美」的視野，搭配岸邊多組大型的幻彩風車輪，營造老街溪充滿希望的光之銀河。
         </p>
 
-        <img class='all_img' src="img/l03.jpg">
+        <img class='all_img' src="img/l03_17.png">
       </div>
     </div>
 
